--- a/style.css
+++ b/style.css
@@ -1,5 +1,17 @@
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+button {
+    padding: 10px 5px;
+    margin-bottom: 25px;
+}
+
 .container {
-    max-width: 800px;
+    max-width: 750px;
     display: flex;
 }
 
